plugins {
    id 'java'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'com.diffplug.spotless'
    id 'checkstyle'
}

group = 'com.barofarm'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

ext {
    set('springCloudVersion', "2025.0.0")
    set('springAiVersion', "1.0.0-M5")
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
    }
}

configurations.all {
    // Spring AI BOM과 springdoc-openapi의 swagger-core 버전 충돌 해결
    resolutionStrategy {
        // Jakarta 버전 (springdoc-openapi 2.8.5가 사용)
        force 'io.swagger.core.v3:swagger-core-jakarta:2.2.28'
        force 'io.swagger.core.v3:swagger-models-jakarta:2.2.28'
        force 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.28'
        // 일반 버전 (일부 라이브러리가 사용)
        force 'io.swagger.core.v3:swagger-core:2.2.22'
        force 'io.swagger.core.v3:swagger-models:2.2.22'
        force 'io.swagger.core.v3:swagger-annotations:2.2.22'
    }
}

dependencies {
    // ========= 공통 유틸 / 개발 편의 =========
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // .env 파일 지원
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // Swagger(OpenAPI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // ========= AI 서비스 의존성 =========
    implementation project(':baro-common')
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator' // Health check용
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-config' // Config Server 클라이언트
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign' // Feign Client

    // Elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    // Spring AI - Elasticsearch VectorStore (ElasticsearchVectorStore)
    implementation 'org.springframework.ai:spring-ai-elasticsearch-store'

    // Kafka 연결
   implementation 'org.springframework.kafka:spring-kafka'

    // Spring AI
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'
}

bootJar {
    enabled = true
    mainClass = 'com.barofarm.ai.AiApplication'
}

jar {
    enabled = false
}
